[package]
name = "rusty-onion"
version = "0.1.0"
authors = ["Adam Wick <awick@uhsure.com>"]
links = "tc_curve25519"
build = "build.rs"

[workspace]

[dependencies]
authority     = { path = "authority"     }
consensus     = { path = "consensus"     }
fetch         = { path = "fetch"         }
log           = "^0.3.0"
parsing_utils = { path = "parsing_utils" }
router_info   = { path = "router_info"   }
tor_crypto    = { path = "tor_crypto"    }
tor_config    = { path = "tor_config"    }

[build-dependencies]
vergen        = "^0.1.0"
